<?xml version="1.0" encoding="utf-8"?>
<com.google.android.flexbox.FlexboxLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:flexDirection="column"
    app:alignItems="center"
    tools:context=".fragments.CriarAnotacoesFragment"
    android:paddingVertical="10dp"
    android:paddingHorizontal="20dp">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/anotacao_titulo"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        android:layout_marginVertical="20dp"
        app:boxBackgroundColor="@android:color/transparent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tituloCampo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/anotacao_descricao"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        android:layout_marginVertical="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descricaoCampo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/botaoSalvarAnotacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/criar"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:paddingVertical="10dp"
        android:textSize="16sp"
        android:layout_marginVertical="20dp"
        />
    <!--<TextView
        android:id="@+id/textview_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/button_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_second" />-->
</com.google.android.flexbox.FlexboxLayout>